--- a/Problem3/Problem3/VEWebsiteSelectorViewController.xib
+++ b/Problem3/Problem3/VEWebsiteSelectorViewController.xib
@@ -6,9 +6,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VEWebsiteSelectorViewController">
             <connections>
+                <outlet property="htmlElement" destination="hLH-Mj-v5y" id="ctI-CC-598"/>
                 <outlet property="nextButton" destination="A8s-7j-aSd" id="lLr-pd-cTb"/>
                 <outlet property="stackView" destination="ndo-lr-TWv" id="RGa-6f-tMM"/>
-                <outlet property="urlTextField" destination="UDw-cc-9xM" id="c37-De-5Je"/>
+                <outlet property="url" destination="UDw-cc-9xM" id="u0k-dt-r4O"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,21 +19,34 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="ndo-lr-TWv">
-                    <rect key="frame" x="175.5" y="230" width="249.5" height="140.5"/>
+                    <rect key="frame" x="150" y="193" width="300" height="214"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a valid URL and press Next" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7v-Zw-eCA">
-                            <rect key="frame" x="0.0" y="0.0" width="249.5" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a valid URL, select the HTML element to explore and press Next" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7v-Zw-eCA">
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="300" id="gkO-OZ-CbM"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="http://www.visual-engin.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDw-cc-9xM">
-                            <rect key="frame" x="22" y="50.5" width="205.5" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="http://www.visual-engin.com/Web/" borderStyle="roundedRect" placeholder="http://www.visual-engin.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDw-cc-9xM">
+                            <rect key="frame" x="28" y="66" width="244" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="244" id="VqF-t2-y0B"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="URL"/>
                         </textField>
+                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hLH-Mj-v5y">
+                            <rect key="frame" x="112.5" y="126" width="75" height="29"/>
+                            <segments>
+                                <segment title="a"/>
+                                <segment title="img"/>
+                            </segments>
+                        </segmentedControl>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8s-7j-aSd">
-                            <rect key="frame" x="108.5" y="110.5" width="32" height="30"/>
+                            <rect key="frame" x="134" y="184" width="32" height="30"/>
                             <state key="normal" title="Next"/>
                             <connections>
                                 <action selector="validateURL:" destination="-1" eventType="touchUpInside" id="vZF-uv-y1e"/>
